changed env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-heroku config:set "MICROSOFT_APP_ID=2173fcca-27f3-4eaf-8da4-1a09be80b110"
-heroku config:set "MICROSOFT_APP_PASSWORD=ltitIAYRS83{}|jfaAD924}"
+MICROSOFT_APP_ID=2173fcca-27f3-4eaf-8da4-1a09be80b110
+MICROSOFT_APP_PASSWORD=ltitIAYRS83{}|jfaAD924}
